packages/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iatipublisher-webserver-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/client-max-body-size: 25m
    nginx.ingress.kubernetes.io/enable-modsecurity: "false"
spec:
  tls:
    - hosts:
        - iatipublisher-dev.yipl.com.np
      secretName: wildcard-yipl-com-np-tls-secret
  rules:
    - host: iatipublisher-dev.yipl.com.np
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iatipublisher-webserver
                port:
                  number: 80
  ingressClassName: nginx
